// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineRipple renders 1`] = `
<DocumentFragment>
  <span
    class="mdc-line-ripple mdc-line-ripple--deactivating"
  />
</DocumentFragment>
`;

exports[`LineRipple renders as active 1`] = `
<DocumentFragment>
  <span
    class="mdc-line-ripple mdc-line-ripple--active"
  />
</DocumentFragment>
`;

exports[`LineRipple renders with center 1`] = `
<DocumentFragment>
  <span
    class="mdc-line-ripple mdc-line-ripple--deactivating"
    style="transform-origin: 1px center;"
  />
</DocumentFragment>
`;
